--- a/dist.ini
+++ b/dist.ini
@@ -3,9 +3,12 @@ author  = Olaf Alders <olaf@wundercounter.com>
 license = Perl_5
 copyright_holder = Olaf Alders
 copyright_year   = 2014
-version = 0.000001
+version = 0.000002
 
 [GatherDir]
+exclude_filename = cpanfile
+exclude_filename = README
+
 [PruneCruft]
 [ManifestSkip]
 [License]
@@ -24,6 +27,7 @@ version = 0.000001
 
 [MetaResources]
 [MetaJSON]
+[MetaYAML]
 [Bugtracker]
 web = http://github.com/oalders/%s/issues
 [GithubMeta]
@@ -54,3 +58,8 @@ allow_dirty = examples
 
 [ContributorsFromGit]
 [ContributorsFile]
+
+[CPANFile]
+[CopyFilesFromBuild]
+copy = cpanfile
+copy = README
